--- a/Makefile.in
+++ b/Makefile.in
@@ -13,6 +13,7 @@ USERLDLIBS =
 
 MAKEINFO = makeinfo
 TEXI2DVI = texi2dvi
+TEXI2PDF = texi2pdf
 TEXI2HTML = texi2html
 
 
@@ -33,11 +34,13 @@ mandir      = @mandir@
 infodir     = @infodir@
 sysconfdir  = @sysconfdir@
 
-CC       = @CC@
-CFLAGS   = @CFLAGS@
-CPPFLAGS = @CPPFLAGS@
-HOST_ID  = @HOST_ID@ 
-DEFS     = @DEFS@ -DSYSCONFDIR=\"$(sysconfdir)\" $(HOST_ID)
+CC         = @CC@
+CXX        = @CXX@
+MYCFLAGS   = @CFLAGS@
+MYCXXFLAGS = @CXXFLAGS@
+CPPFLAGS   = @CPPFLAGS@
+HOST_ID    = @HOST_ID@ 
+DEFS       = @DEFS@ -DSYSCONFDIR=\"$(sysconfdir)\" $(HOST_ID)
 
 LDFLAGS     = @LDFLAGS@
 LIBS        = @LIBS@
@@ -48,12 +51,15 @@ LN_S        = @LN_S@
 INSTALL         = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA    = @INSTALL_DATA@
+INSTALL_INFO	= @INSTALL_INFO@
 
 .SUFFIXES:
 .SUFFIXES: .o .c
+.SUFFIXES: .o .c
 
-MAN1 = mattrib.1 mbadblocks.1 mcd.1 mcopy.1 mdel.1 mdeltree.1 mdir.1 \
-mdu.1 mformat.1 mkmanifest.1 mlabel.1 mmd.1 mmount.1 mmove.1 mpartition.1 \
+MAN1 = floppyd.1 floppyd_installtest.1 mattrib.1 mbadblocks.1 mcat.1 mcd.1 \
+mcopy.1 mdel.1 mdeltree.1 mdir.1 mdu.1 mformat.1  minfo.1 mkmanifest.1 \
+mlabel.1 mmd.1 mmount.1 mmove.1 mpartition.1 \
 mrd.1 mread.1 mren.1 mshowfat.1 mtoolstest.1 mtools.1 mtype.1 mzip.1
 MAN1EXT	= 1
 MAN1DIR	= $(mandir)/man${MAN1EXT}
@@ -68,34 +74,42 @@ buffer.c buffer.h codepage.c codepage.h codepages.c config.c \
 config.guess config.h.in config.log config.sub configure configure.in \
 copyfile.c devices.c devices.h dirCache.c dirCache.h directory.c direntry.c \
 expand.c fat.c \
-fat_free.c file.c file.h file_name.c file_read.c files filter.c force_io.c \
-fs.h fsP.h getopt.h hash.c htable.h init.c mainloop.c match.c mattrib.1 \
-mattrib.c mbadblocks.1 mbadblocks.c mcd.1 mcd.c mcopy.1 mcopy.c mdel.1 \
-mdel.c mdeltree.1 mdir.1 mdir.c mdu.c mdu.1 mformat.1 mformat.c minfo.c \
+fat_free.c file.c file.h file_name.c files filter.c floppyd.1 \
+floppyd.c floppyd_io.c floppyd_io.h force_io.c fs.h fsP.h \
+getopt.h hash.c htable.h init.c llong.c mainloop.c match.c mattrib.1 \
+mattrib.c mbadblocks.1 mbadblocks.c mcat.1 mcat.c mcd.1 mcd.c mcopy.1 \
+mcopy.c mdel.1 mdel.c mdeltree.1 mdir.1 mdir.c mdu.c mdu.1 mformat.1 \
+mformat.c minfo.c \
 misc.c tty.c scsi.c missFuncs.c mk_direntry.c mkmanifest.1 mkmanifest.c \
 mlabel.1 mlabel.c mmd.1 mmd.c mmount.1 mmount.c mmove.1 mmove.c \
 mpartition.1 mpartition.c mrd.1 \
 mread.1 mren.1 msdos.h mshowfat.1 mtoolstest.1 mtools.1 mtools.5 mtools.c \
-mtools.conf mtools.h mtype.1 nameclash.h patchlevel.h \
+mtools.conf mtools.h mtype.1 nameclash.h patchlevel.c \
 plain_io.c plain_io.h precmd.c privileges.c scripts signal.c stream.c stream.h \
 streamcache.c streamcache.h subdir.c sysincludes.h unixdir.c todo toupper.c \
 vfat.c vfat.h xdf_io.c xdf_io.h
 
 OBJS1 = buffer.o codepage.o codepages.o config.o copyfile.o devices.o \
-dirCache.o directory.o direntry.o expand.o fat.o fat_free.o file.o file_name.o \
-file_read.o filter.o force_io.o hash.o init.o match.o mainloop.o \
-mattrib.o mbadblocks.o mcd.o mcopy.o mdel.o mdir.o mdu.o mformat.o \
-minfo.o misc.o missFuncs.o mk_direntry.o mlabel.o mmd.o mmount.o \
-mmove.o mpartition.o mshowfat.o mzip.o mtools.o plain_io.o \
+dirCache.o directory.o direntry.o expand.o fat.o fat_free.o file.o  \
+file_name.o filter.o floppyd_io.o force_io.o hash.o init.o llong.o match.o \
+mainloop.o mattrib.o mbadblocks.o mcat.o mcd.o mcopy.o mdel.o mdir.o \
+mdoctorfat.o mdu.o \
+mformat.o minfo.o misc.o missFuncs.o mk_direntry.o mlabel.o mmd.o mmount.o \
+mmove.o mpartition.o mshowfat.o mzip.o mtools.o patchlevel.o plain_io.o \
 precmd.o privileges.o scsi.o signal.o stream.o streamcache.o subdir.o \
 unixdir.o toupper.o tty.o vfat.o xdf_io.o
 
-OBJS2 = missFuncs.o mkmanifest.o misc.o
+OBJS2 = missFuncs.o mkmanifest.o misc.o patchlevel.o
+
+SRCS3 = floppyd.c
+
+OBJS4 = floppyd_installtest.o misc.o expand.o privileges.o
 
 SRCS = buffer.c codepage.c codepages.c config.c copyfile.c devices.c \
 dirCache.c directory.c direntry.c expand.c fat.c fat_free.c file.c file_name.c \
-file_read.c filter.c force_io.c hash.c init.c match.c mainloop.c mattrib.c \
-mbadblocks.c mcd.c mcopy.c mdel.c mdir.c mdu.c mformat.c minfo.c misc.c \
+file_read.c filter.c floppyd_io.c force_io.c hash.c init.c match.c mainloop.c \
+mattrib.c mbadblocks.c mcat.c mcd.c mcopy.c mdel.c mdir.c mdu.c mdoctorfat.c \
+mformat.c minfo.c misc.c \
 missFuncs.c mk_direntry.c mlabel.c mmd.c mmount.c mmove.c mpartition.c \
 mshowfat.c mzip.c mtools.c plain_io.c precmd.c privileges.c scsi.o \
 signal.c stream.c streamcache.c subdir.c unixdir.c toupper.c tty.o vfat.c \
@@ -104,24 +118,43 @@ xdf_io.c mkmanifest.c
 
 SCRIPTS = mcheck mxtar uz tgz mcomp
 
-LINKS=mattrib mcd mcopy mdel mdeltree mdir mdu mformat minfo mlabel \
+LINKS=mattrib mcat mcd mcopy mdel mdeltree mdir mdu mformat minfo mlabel \
 mmd mmount mmove mpartition mrd mread mren mtype mtoolstest mshowfat \
 mbadblocks mzip
 
-ALLCFLAGS = $(CPPFLAGS) $(DEFS) $(CFLAGS) -I. @extraincludedir@ -I@srcdir@ $(USERCFLAGS) 
+X_CFLAGS = @X_CFLAGS@
+X_LIBS = @X_LIBS@
+X_EXTRA_LIBS = @X_EXTRA_LIBS@
+X_PRE_LIBS = @X_PRE_LIBS@
+CFLAGS = $(CPPFLAGS) $(DEFS) $(MYCFLAGS) -I. @extraincludedir@ -I@srcdir@ $(USERCFLAGS) 
+CXXFLAGS  = $(CPPFLAGS) $(DEFS) $(MYCXXFLAGS) -I. @extraincludedir@ -I@srcdir@ $(USERCFLAGS) 
 LINK      = $(CC) $(LDFLAGS) $(USERLDFLAGS) @extralibdir@
-ALLLIBS   = $(USERLDLIBS) $(MACHDEPLIBS) $(LIBS) $(SHLIB)
+ALLLIBS   = $(USERLDLIBS) $(MACHDEPLIBS) $(SHLIB) $(LIBS)
+X_LDFLAGS = $(X_EXTRA_LIBS) $(X_LIBS) $(X_PRE_LIBS) -lXau -lX11 $(LIBS) 
+X_CCFLAGS = $(X_CFLAGS) $(CFLAGS)
 
-all:    mtools $(LINKS) mkmanifest
+all:    mtools $(LINKS) mkmanifest @FLOPPYD@
 
 %.o: %.c
-	$(CC) $(ALLCFLAGS) -c $<
+	$(CC) $(CFLAGS) -c $<
+
+#%.o: %.cpp
+#	$(CXX) $(CXXFLAGS) -c $<
 
 mtools: $(OBJS1)
 	$(LINK) $(OBJS1) -o $@ $(ALLLIBS)
 
 mkmanifest: $(OBJS2)
 	$(LINK) $(OBJS2) -o $@ $(ALLLIBS)
+
+floppyd.o: floppyd.c
+	$(CC) $(X_CCFLAGS) -c $?
+
+floppyd: floppyd.o
+	$(LINK) $? -o $@ $(X_LDFLAGS)
+floppyd_installtest: $(OBJS4)
+	$(LINK) $(OBJS4) -o $@ $(ALLLIBS)
+
 
 $(LINKS): mtools
 	rm -f $@ && $(LN_S) mtools $@
@@ -130,7 +163,7 @@ mostlyclean:
 	-rm -f *~ *.orig *.o a.out core 2>/dev/null
 
 clean:	mostlyclean
-	-rm -f mtools $(LINKS) mkmanifest *.info* *.dvi *.html 2>/dev/null
+	-rm -f mtools $(LINKS) floppyd floppyd_installtest mkmanifest *.info* *.dvi *.html 2>/dev/null
 
 
 texclean:
@@ -146,6 +179,14 @@ info: mtools.info
 dvi: mtools.dvi
 %.dvi: %.texi
 	$(TEXI2DVI) $<
+
+ps: mtools.ps
+%.ps: %.dvi
+	dvips -f < $< > $@
+
+pdf: mtools.pdf
+%.pdf: %.texi
+	$(TEXI2PDF) $<
 
 
 html: mtools.html mtools_toc.html
@@ -163,20 +204,37 @@ install-info: info
 	  for i in $(srcdir)/mtools.info*; do \
 	    $(INSTALL_DATA) $$i $(infodir)/`echo $$i | sed 's|^$(srcdir)/||'`; \
 	  done; \
+	fi; \
+	if [ -n "$(INSTALL_INFO)" ] ; then \
+		if [ -f $(infodir)/dir.info ] ; then \
+			$(INSTALL_INFO) $(infodir)/mtools.info $(infodir)/dir.info; \
+		fi; \
+		if [ -f $(infodir)/dir ] ; then \
+			$(INSTALL_INFO) $(infodir)/mtools.info $(infodir)/dir; \
+		fi; \
 	fi
 
 uninstall-info:
 	cd $(infodir) && rm -f mtools.info*
 
-install:	$(bindir)/mtools install-man install-links \
+install:	$(bindir)/mtools @BINFLOPPYD@ install-man install-links \
 		$(bindir)/mkmanifest install-scripts install-info
 
 uninstall:	uninstall-bin uninstall-man uninstall-links \
 		uninstall-scripts
 
-distclean: clean
+distclean: clean texclean
 	rm -f config.cache config.h config.status config.log Makefile
 maintainer-clean: distclean
+
+
+$(bindir)/floppyd: floppyd
+	$(top_srcdir)/mkinstalldirs $(bindir)
+	$(INSTALL_PROGRAM) floppyd $(bindir)/floppyd
+
+$(bindir)/floppyd_installtest: floppyd_installtest
+	$(top_srcdir)/mkinstalldirs $(bindir)
+	$(INSTALL_PROGRAM) floppyd_installtest $(bindir)/floppyd_installtest
 
 $(bindir)/mtools: mtools
 	$(top_srcdir)/mkinstalldirs $(bindir)
@@ -247,7 +305,7 @@ uninstall-links:
 	done
 
 depend: $(SRCS)
-	makedepend -- $(ALLCFLAGS) -- $^
+	makedepend -- $(CFLAGS) -- $^
 
 check:
 	echo No self tests included
