--- a/configure.in
+++ b/configure.in
@@ -5,9 +5,12 @@ AC_CONFIG_HEADER(config.h)
 
 dnl Checks for compiler
 AC_PROG_CC
+dnl AC_PROG_CXX
 AC_PROG_GCC_TRADITIONAL
 AC_PROG_INSTALL
 AC_PROG_LN_S
+
+AC_PATH_PROG(INSTALL_INFO, install-info, "")
 
 dnl Check for Systems
 AC_AIX
@@ -75,16 +78,76 @@ dnl Checks for libraries.
 
 dnl AC_IRIX_SUN
 AC_CHECK_LIB(sun, getpwnam)
+AC_CHECK_LIB(cam, cam_open_device)
 
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(getopt.h sys/stat.h stdlib.h unistd.h libc.h \
-fcntl.h limits.h sys/file.h sys/ioctl.h sys/time.h strings.h string.h \
+AC_CHECK_HEADERS(getopt.h sys/stat.h stdlib.h unistd.h linux/unistd.h \
+libc.h fcntl.h limits.h sys/file.h sys/ioctl.h sys/time.h strings.h string.h \
 sys/param.h memory.h malloc.h signal.h sys/signal.h utime.h sgtty.h \
-sys/floppy.h mntent.h)
+sys/floppy.h mntent.h sys/sysmacros.h netinet/in.h)
 AC_CHECK_HEADERS(termio.h sys/termio.h, [break])
 AC_CHECK_HEADERS(termios.h sys/termios.h, [break])
+
+
+dnl
+dnl Check to see if llseek() is declared in unistd.h.  On some libc's 
+dnl it is, and on others it isn't..... Thank you glibc developers....
+dnl
+dnl Warning!  Use of --enable-gcc-wall may throw off this test.
+dnl
+dnl
+AC_MSG_CHECKING(whether llseek declared in unistd.h)
+AC_CACHE_VAL(mtools_cv_have_llseek_prototype,
+        AC_TRY_COMPILE(
+[#include <unistd.h>], [extern int llseek(int);],
+        [mtools_cv_have_llseek_prototype=no],
+        [mtools_cv_have_llseek_prototype=yes]))
+AC_MSG_RESULT($mtools_cv_have_llseek_prototype)
+if test "$mtools_cv_have_llseek_prototype" = yes; then
+   AC_DEFINE(HAVE_LLSEEK_PROTOTYPE)
+fi
+
+AC_MSG_CHECKING(whether lseek64 declared in unistd.h)
+AC_CACHE_VAL(mtools_cv_have_lseek64_prototype,
+        AC_TRY_COMPILE(
+[
+#include "sysincludes.h"
+#include <unistd.h>
+], [extern int lseek64(int);],
+        [mtools_cv_have_lseek64_prototype=no],
+        [mtools_cv_have_lseek64_prototype=yes]))
+AC_MSG_RESULT($mtools_cv_have_lseek64_prototype)
+if test "$mtools_cv_have_lseek64_prototype" = yes; then
+   AC_DEFINE(HAVE_LSEEK64_PROTOTYPE)
+fi
+
+
+
+
+dnl
+dnl Check to see if lseek64() is declared in unistd.h.  On some libc's 
+dnl it is, and on others it isn't..... Thank you glibc developers....
+dnl
+dnl Warning!  Use of --enable-gcc-wall may throw off this test.
+dnl
+dnl
+AC_MSG_CHECKING(whether lseek64 declared in unistd.h)
+AC_CACHE_VAL(mtools_cv_have_lseek64_prototype,
+        AC_TRY_COMPILE(
+[#include <unistd.h>], [extern int lseek64(int);],
+        [mtools_cv_have_lseek64_prototype=no],
+        [mtools_cv_have_lseek64_prototype=yes]))
+AC_MSG_RESULT($mtools_cv_have_lseek64_prototype)
+if test "$mtools_cv_have_lseek64_prototype" = yes; then
+   AC_DEFINE(HAVE_LLSEEK_PROTOTYPE)
+fi
+
+
+
+AC_CHECK_FUNCS(htons)
+
 dnl Apparently termio before termios is preferred by A/UX, AIX and SCO
 
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -94,12 +157,98 @@ AC_TYPE_SIZE_T
 AC_HEADER_TIME
 AC_STRUCT_TM
 
+
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
 AC_CHECK_FUNCS(strerror random srandom strchr strrchr lockf flock \
 strcasecmp strncasecmp atexit on_exit getpass memmove \
-strdup strcspn strspn strtoul memcpy strpbrk memset seteuid setresuid \
-tcsetattr tcflush basename fchdir)
+strdup strcspn strspn strtoul strtol memcpy strpbrk memset seteuid setresuid \
+tcsetattr tcflush basename fchdir media_oldaliases llseek lseek64 \
+snprintf stat64)
+AC_FUNC_SETPGRP
+
+dnl
+dnl Check for 64-bit off_t
+dnl
+AC_DEFUN(SFS_CHECK_OFF_T_64,
+[AC_CACHE_CHECK(for 64-bit off_t, sfs_cv_off_t_64,
+AC_TRY_COMPILE([
+#include <unistd.h>
+#include <sys/types.h>
+],[
+switch (0) case 0: case (sizeof (off_t) <= 4):;
+], sfs_cv_off_t_64=no, sfs_cv_off_t_64=yes))
+if test $sfs_cv_off_t_64 = yes; then
+        AC_DEFINE(HAVE_OFF_T_64)
+fi])
+
+
+dnl ICE_CC_LOFF_T
+dnl -------------
+dnl
+dnl If the CC compiler supports `loff_t' type,  define `HAVE_LOFF_T'.
+dnl
+AC_DEFUN(ICE_CC_LOFF_T,
+[
+AC_MSG_CHECKING(whether ${CC} supports loff_t type)
+AC_CACHE_VAL(ice_cv_have_loff_t,
+[
+AC_TRY_COMPILE([#include <sys/types.h>],[loff_t a;],
+ice_cv_have_loff_t=yes,
+ice_cv_have_loff_t=no)
+])
+AC_MSG_RESULT($ice_cv_have_loff_t)
+if test "$ice_cv_have_loff_t" = yes; then
+AC_DEFINE(HAVE_LOFF_T)
+fi
+])dnl
+
+
+dnl ICE_CC_OFFSET_T
+dnl -------------
+dnl
+dnl If the CC compiler supports `offset_t' type,  define `HAVE_OFFSET_T'.
+dnl
+AC_DEFUN(ICE_CC_OFFSET_T,
+[
+AC_MSG_CHECKING(whether ${CC} supports offset_t type)
+AC_CACHE_VAL(ice_cv_have_offset_t,
+[
+AC_TRY_COMPILE([#include <sys/types.h>],[offset_t a;],
+ice_cv_have_offset_t=yes,
+ice_cv_have_offset_t=no)
+])
+AC_MSG_RESULT($ice_cv_have_offset_t)
+if test "$ice_cv_have_offset_t" = yes; then
+AC_DEFINE(HAVE_OFFSET_T)
+fi
+])dnl
+
+dnl ICE_CC_LONG_LONG
+dnl -------------
+dnl
+dnl If the CC compiler supports `long long' type,  define `HAVE_LONG_LONG'.
+dnl
+AC_DEFUN(ICE_CC_LONG_LONG,
+[
+AC_MSG_CHECKING(whether ${CC} supports long long type)
+AC_CACHE_VAL(ice_cv_have_long_long,
+[
+AC_TRY_COMPILE(,[long long a;],
+ice_cv_have_long_long=yes,
+ice_cv_have_long_long=no)
+])
+AC_MSG_RESULT($ice_cv_have_long_long)
+if test "$ice_cv_have_long_long" = yes; then
+AC_DEFINE(HAVE_LONG_LONG)
+fi
+])dnl
+
+
+SFS_CHECK_OFF_T_64
+ICE_CC_LOFF_T
+ICE_CC_OFFSET_T
+ICE_CC_LONG_LONG
 
 
 AC_CHECK_FUNCS(utimes utime, [break])
@@ -141,8 +290,11 @@ if [ "X$GCC" = "Xyes" ] ; then
     if [ "$host_os3" = aux ] ; then
 	    CFLAGS="$CFLAGS -ZP"
 	    MACHDEPLIBS="-lposix -UTIL"
-    fi	
-    CFLAGS="$CFLAGS -O4 $Wall"
+    fi
+    case "${host}" in
+       arm*-*-linux) CFLAGS="$CFLAGS -mstructure-size-boundary=8";;
+    esac
+    CFLAGS="$CFLAGS $Wall"
 else
     if [ $host_os3 = hpux ] ; then
 	    CPPFLAGS="$CPPFLAGS -Ae"
@@ -190,10 +342,45 @@ if [ -d /usr/5lib ] ; then
 	extralibdir=-L/usr/5lib
 fi
 
-if [ -d /usr/5include ] ; then
-	extraincludedir=-I/usr/5include
-fi
 ]
+
+AC_PATH_X
+AC_PATH_XTRA
+
+dnl Floppyd
+use_floppyd=undef
+AC_ARG_ENABLE(floppyd,
+[  --enable-floppyd       floppy daemon support],
+[if test x$enableval != x; then
+  use_floppyd=$enableval
+fi])
+
+AC_CHECK_LIB(socket,main)
+AC_CHECK_LIB(nsl,main)
+AC_CHECK_LIB(bsd,main)
+AC_CHECK_HEADERS(sys/socket.h arpa/inet.h netdb.h)
+
+if test $use_floppyd = undef -a X$no_x = X ; then
+    use_floppyd="yes"
+fi
+
+if test $use_floppyd = yes; then
+    if test no_x = yes ; then
+	echo "Floppyd needs X support" >&2
+	echo "To compile without floppyd, use ./configure --disable-floppyd" >&2
+	exit 1
+    fi
+    FLOPPYD="floppyd floppyd_installtest"
+    BINFLOPPYD="\$(bindir)/floppyd \$(bindir)/floppyd_installtest"
+    AC_DEFINE(USE_FLOPPYD) 
+else
+    FLOPPYD=
+    BINFLOPPYD=
+fi
+
+
+AC_SUBST(FLOPPYD)
+AC_SUBST(BINFLOPPYD)
 AC_SUBST(extraincludedir)
 AC_SUBST(extralibdir)
 AC_SUBST(MACHDEPLIBS)
