--- a/configure.in
+++ b/configure.in
@@ -27,8 +27,8 @@ dnl Enable OS/2 extended density format disks
 AC_ARG_ENABLE(xdf,
 [  --enable-xdf           support for OS/2 extended density format disks],
 [if test x$enableval = xyes; then
-  AC_DEFINE(USE_XDF)
-fi],AC_DEFINE(USE_XDF))
+  AC_DEFINE([USE_XDF],1,[Define this if you want to use Xdf])
+fi],AC_DEFINE([USE_XDF],1,[Define this if you want to use Xdf]))
 
 
 dnl Check for configuration options
@@ -36,7 +36,7 @@ dnl Enable usage of vold on Solaris
 AC_ARG_ENABLE(vold,
 [  --enable-vold          compatibility with Solaris' vold],
 [if test x$enableval = xyes; then
-  AC_DEFINE(USING_VOLD)
+  AC_DEFINE([USING_VOLD],1,[Define this if you use mtools together with Solaris' vold])
 fi])
 
 
@@ -46,7 +46,7 @@ AC_ARG_ENABLE(new-vold,
 [  --enable-new-vold          compatibility with Solaris' vold, new version],
 [newVold=x$enableval
 if test x$enableval = xyes; then
-  AC_DEFINE(USING_NEW_VOLD)
+  AC_DEFINE([USING_NEW_VOLD],1,[Define this if you use mtools together with the new Solaris' vold support])
 fi])
 
 
@@ -55,7 +55,7 @@ dnl Debugging
 AC_ARG_ENABLE(debug,
 [  --enable-debug         debuging messages],
 [if test x$enableval = xyes; then
-  AC_DEFINE(DEBUG)
+  AC_DEFINE([DEBUG],1,[Define for debugging messages])
 fi])
 
 
@@ -64,9 +64,9 @@ dnl Raw terminal code (enabled by default)
 AC_ARG_ENABLE(raw_term,
 [  --enable-raw-term      raw terminal (readkey behaviour, default)],
 [if test x$enableval = xyes; then
-  AC_DEFINE(USE_RAWTERM)
+  AC_DEFINE([USE_RAWTERM],1,[Define on non Unix OS'es which don't have the concept of tty's])
 fi],
-AC_DEFINE(USE_RAWTERM))
+AC_DEFINE([USE_RAWTERM],1,[Define on non Unix OS'es which don't have the concept of tty's]))
 
 
 dnl Checks for libraries.
@@ -81,7 +81,7 @@ AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(getopt.h sys/stat.h stdlib.h unistd.h linux/unistd.h \
 libc.h fcntl.h limits.h sys/file.h sys/ioctl.h sys/time.h strings.h string.h \
 sys/param.h memory.h malloc.h signal.h sys/signal.h utime.h sgtty.h \
-sys/floppy.h mntent.h sys/sysmacros.h netinet/in.h)
+sys/floppy.h mntent.h sys/sysmacros.h netinet/in.h assert.h)
 AC_CHECK_HEADERS(termio.h sys/termio.h, [break])
 AC_CHECK_HEADERS(termios.h sys/termios.h, [break])
 
@@ -101,7 +101,7 @@ AC_CACHE_VAL(mtools_cv_have_llseek_prototype,
         [mtools_cv_have_llseek_prototype=yes]))
 AC_MSG_RESULT($mtools_cv_have_llseek_prototype)
 if test "$mtools_cv_have_llseek_prototype" = yes; then
-   AC_DEFINE(HAVE_LLSEEK_PROTOTYPE)
+   AC_DEFINE([HAVE_LLSEEK_PROTOTYPE],1,[Define when you have an LLSEEK prototype])
 fi
 
 AC_MSG_CHECKING(whether lseek64 declared in unistd.h)
@@ -115,30 +115,8 @@ AC_CACHE_VAL(mtools_cv_have_lseek64_prototype,
         [mtools_cv_have_lseek64_prototype=yes]))
 AC_MSG_RESULT($mtools_cv_have_lseek64_prototype)
 if test "$mtools_cv_have_lseek64_prototype" = yes; then
-   AC_DEFINE(HAVE_LSEEK64_PROTOTYPE)
+   AC_DEFINE([HAVE_LSEEK64_PROTOTYPE],1,[Define when you have an LSEEK64 prototype])
 fi
-
-
-
-
-dnl
-dnl Check to see if lseek64() is declared in unistd.h.  On some libc's 
-dnl it is, and on others it isn't..... Thank you glibc developers....
-dnl
-dnl Warning!  Use of --enable-gcc-wall may throw off this test.
-dnl
-dnl
-AC_MSG_CHECKING(whether lseek64 declared in unistd.h)
-AC_CACHE_VAL(mtools_cv_have_lseek64_prototype,
-        AC_TRY_COMPILE(
-[#include <unistd.h>], [extern int lseek64(int);],
-        [mtools_cv_have_lseek64_prototype=no],
-        [mtools_cv_have_lseek64_prototype=yes]))
-AC_MSG_RESULT($mtools_cv_have_lseek64_prototype)
-if test "$mtools_cv_have_lseek64_prototype" = yes; then
-   AC_DEFINE(HAVE_LLSEEK_PROTOTYPE)
-fi
-
 
 
 AC_CHECK_FUNCS(htons)
@@ -174,7 +152,7 @@ AC_TRY_COMPILE([
 switch (0) case 0: case (sizeof (off_t) <= 4):;
 ], sfs_cv_off_t_64=no, sfs_cv_off_t_64=yes))
 if test $sfs_cv_off_t_64 = yes; then
-        AC_DEFINE(HAVE_OFF_T_64)
+        AC_DEFINE([HAVE_OFF_T_64],1,[Define when the system has a 64 bit off_t type])
 fi])
 
 
@@ -194,7 +172,7 @@ ice_cv_have_loff_t=no)
 ])
 AC_MSG_RESULT($ice_cv_have_loff_t)
 if test "$ice_cv_have_loff_t" = yes; then
-AC_DEFINE(HAVE_LOFF_T)
+AC_DEFINE([HAVE_LOFF_T],1,[Define when the compiler supports LOFF_T type])
 fi
 ])dnl
 
@@ -215,7 +193,7 @@ ice_cv_have_offset_t=no)
 ])
 AC_MSG_RESULT($ice_cv_have_offset_t)
 if test "$ice_cv_have_offset_t" = yes; then
-AC_DEFINE(HAVE_OFFSET_T)
+AC_DEFINE([HAVE_OFFSET_T],1,[Define when the compiler supports OFFSET_T type])
 fi
 ])dnl
 
@@ -235,7 +213,7 @@ ice_cv_have_long_long=no)
 ])
 AC_MSG_RESULT($ice_cv_have_long_long)
 if test "$ice_cv_have_long_long" = yes; then
-AC_DEFINE(HAVE_LONG_LONG)
+AC_DEFINE([HAVE_LONG_LONG],1,[Define when the compiler supports LONG_LONG type])
 fi
 ])dnl
 
@@ -366,7 +344,7 @@ if test X$use_floppyd = Xyes; then
     fi
     FLOPPYD="floppyd floppyd_installtest"
     BINFLOPPYD="\$(bindir)/floppyd \$(bindir)/floppyd_installtest"
-    AC_DEFINE(USE_FLOPPYD) 
+    AC_DEFINE([USE_FLOPPYD],1,[Define when you want to include floppyd support]) 
 else
     FLOPPYD=
     BINFLOPPYD=
