--- a/Makefile.in
+++ b/Makefile.in
@@ -61,10 +61,10 @@ mclasserase.1 mcopy.1 mdel.1 mdeltree.1 mdir.1 mdu.1 mformat.1  minfo.1 \
 mkmanifest.1 mlabel.1 mmd.1 mmount.1 mmove.1 mpartition.1 \
 mrd.1 mren.1 mshowfat.1 mtoolstest.1 mtools.1 mtype.1 mzip.1
 MAN1EXT	= 1
-MAN1DIR	= $(mandir)/man${MAN1EXT}
+MAN1DIR	= $(DESTDIR)$(mandir)/man${MAN1EXT}
 MAN5	= mtools.5
 MAN5EXT	= 5
-MAN5DIR	= $(mandir)/man${MAN5EXT}
+MAN5DIR	= $(DESTDIR)$(mandir)/man${MAN5EXT}
 
 # all files in this directory included in the distribution 
 DIST = \
@@ -195,30 +195,30 @@ html: mtools.html mtools_toc.html
 
 # Don't cd, to avoid breaking install-sh references.
 install-info: info
-	$(top_srcdir)/mkinstalldirs $(infodir)
+	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(infodir)
 	if test -f mtools.info; then \
 	  for i in mtools.info*; do \
-	    $(INSTALL_DATA) $$i $(infodir)/$$i; \
+	    $(INSTALL_DATA) $$i $(DESTDIR)$(infodir)/$$i; \
 	  done; \
 	else \
 	  for i in $(srcdir)/mtools.info*; do \
-	    $(INSTALL_DATA) $$i $(infodir)/`echo $$i | sed 's|^$(srcdir)/||'`; \
+	    $(INSTALL_DATA) $$i $(DESTDIR)$(infodir)/`echo $$i | sed 's|^$(srcdir)/||'`; \
 	  done; \
 	fi; \
 	if [ -n "$(INSTALL_INFO)" ] ; then \
-		if [ -f $(infodir)/dir.info ] ; then \
-			$(INSTALL_INFO) $(infodir)/mtools.info $(infodir)/dir.info; \
+		if [ -f $(DESTDIR)$(infodir)/dir.info ] ; then \
+			$(INSTALL_INFO) $(DESTDIR)$(infodir)/mtools.info $(DESTDIR)$(infodir)/dir.info; \
 		fi; \
-		if [ -f $(infodir)/dir ] ; then \
-			$(INSTALL_INFO) $(infodir)/mtools.info $(infodir)/dir; \
+		if [ -f $(DESTDIR)$(infodir)/dir ] ; then \
+			$(INSTALL_INFO) $(DESTDIR)$(infodir)/mtools.info $(DESTDIR)$(infodir)/dir; \
 		fi; \
 	fi
 
 uninstall-info:
-	cd $(infodir) && rm -f mtools.info*
+	cd $(DESTDIR)$(infodir) && rm -f mtools.info*
 
-install:	$(bindir)/mtools @BINFLOPPYD@ install-man install-links \
-		$(bindir)/mkmanifest install-scripts install-info
+install:	$(DESTDIR)$(bindir)/mtools @BINFLOPPYD@ install-man install-links \
+		$(DESTDIR)$(bindir)/mkmanifest install-scripts install-info
 
 uninstall:	uninstall-bin uninstall-man uninstall-links \
 		uninstall-scripts
@@ -228,41 +228,41 @@ distclean: clean texclean
 maintainer-clean: distclean
 
 
-$(bindir)/floppyd: floppyd
-	$(top_srcdir)/mkinstalldirs $(bindir)
-	$(INSTALL_PROGRAM) floppyd $(bindir)/floppyd
+$(DESTDIR)$(bindir)/floppyd: floppyd
+	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) floppyd $(DESTDIR)$(bindir)/floppyd
 
-$(bindir)/floppyd_installtest: floppyd_installtest
-	$(top_srcdir)/mkinstalldirs $(bindir)
-	$(INSTALL_PROGRAM) floppyd_installtest $(bindir)/floppyd_installtest
+$(DESTDIR)$(bindir)/floppyd_installtest: floppyd_installtest
+	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) floppyd_installtest $(DESTDIR)$(bindir)/floppyd_installtest
 
-$(bindir)/mtools: mtools
-	$(top_srcdir)/mkinstalldirs $(bindir)
-	$(INSTALL_PROGRAM) mtools $(bindir)/mtools
+$(DESTDIR)$(bindir)/mtools: mtools
+	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) mtools $(DESTDIR)$(bindir)/mtools
 
-$(bindir)/mkmanifest: mkmanifest
-	$(top_srcdir)/mkinstalldirs $(bindir)
-	$(INSTALL_PROGRAM) mkmanifest $(bindir)/mkmanifest
+$(DESTDIR)$(bindir)/mkmanifest: mkmanifest
+	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(bindir)
+	$(INSTALL_PROGRAM) mkmanifest $(DESTDIR)$(bindir)/mkmanifest
 
 #$(ETCDIR)/mtools: mtools.etc
 #	cp mtools.etc $(ETCDIR)/mtools
 
-install-links: $(bindir)/mtools
+install-links: $(DESTDIR)$(bindir)/mtools
 	@for j in $(LINKS); do \
-		rm -f $(bindir)/$$j ; \
-		$(LN_S) mtools $(bindir)/$$j ; \
-		echo $(bindir)/$$j ; \
+		rm -f $(DESTDIR)$(bindir)/$$j ; \
+		$(LN_S) mtools $(DESTDIR)$(bindir)/$$j ; \
+		echo $(DESTDIR)$(bindir)/$$j ; \
 	done
 
 ## "z" is the older version of "gz"; the name is just *too* short
-install-scripts: $(bindir)/mtools
-	@$(top_srcdir)/mkinstalldirs $(bindir)
+install-scripts: $(DESTDIR)$(bindir)/mtools
+	@$(top_srcdir)/mkinstalldirs $(DESTDIR)$(bindir)
 	@for j in $(SCRIPTS) ; do \
-		$(INSTALL_PROGRAM) $(srcdir)/scripts/$$j $(bindir)/$$j ; \
-		echo $(bindir)/$$j ; \
+		$(INSTALL_PROGRAM) $(srcdir)/scripts/$$j $(DESTDIR)$(bindir)/$$j ; \
+		echo $(DESTDIR)$(bindir)/$$j ; \
 	done
-	rm -f $(bindir)/lz
-	$(LN_S) uz $(bindir)/lz
+	rm -f $(DESTDIR)$(bindir)/lz
+	$(LN_S) uz $(DESTDIR)$(bindir)/lz
 
 install-man:
 	@$(top_srcdir)/mkinstalldirs $(MAN1DIR)
@@ -278,14 +278,14 @@ install-man:
 
 uninstall-bin:
 	@for j in mtools mkmanifest; do \
-		rm -f $(bindir)/$$j ; \
-		echo $(bindir)/$$j ; \
+		rm -f $(DESTDIR)$(bindir)/$$j ; \
+		echo $(DESTDIR)$(bindir)/$$j ; \
 	done
 
 uninstall-scripts:
 	@for j in $(SCRIPTS); do \
-		rm -f $(bindir)/$$j ; \
-		echo $(bindir)/$$j ; \
+		rm -f $(DESTDIR)$(bindir)/$$j ; \
+		echo $(DESTDIR)$(bindir)/$$j ; \
 	done
 
 uninstall-man:
@@ -300,8 +300,8 @@ uninstall-man:
 
 uninstall-links:
 	@for j in $(LINKS); \
-		do rm -f $(bindir)/$$j ; \
-		echo $(bindir)/$$j ; \
+		do rm -f $(DESTDIR)$(bindir)/$$j ; \
+		echo $(DESTDIR)$(bindir)/$$j ; \
 	done
 
 depend: $(SRCS)
