Do floppyd too, previously forgotten
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@110 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -344,7 +344,7 @@ if test X$use_floppyd = Xyes; then
 	exit 1
     fi
     FLOPPYD="floppyd floppyd_installtest"
-    BINFLOPPYD="\$(bindir)/floppyd \$(bindir)/floppyd_installtest"
+    BINFLOPPYD="\$(DESTDIR)\$(bindir)/floppyd \$(DESTDIR)\$(bindir)/floppyd_installtest"
     AC_DEFINE([USE_FLOPPYD],1,[Define when you want to include floppyd support]) 
 else
     FLOPPYD=
