If neither dir not dir.info Info directory exists, use dir
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@111 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Makefile.in
+++ b/Makefile.in
@@ -208,8 +208,7 @@ install-info: info
 	if [ -n "$(INSTALL_INFO)" ] ; then \
 		if [ -f $(DESTDIR)$(infodir)/dir.info ] ; then \
 			$(INSTALL_INFO) $(DESTDIR)$(infodir)/mtools.info $(DESTDIR)$(infodir)/dir.info; \
-		fi; \
-		if [ -f $(DESTDIR)$(infodir)/dir ] ; then \
+		else \
 			$(INSTALL_INFO) $(DESTDIR)$(infodir)/mtools.info $(DESTDIR)$(infodir)/dir; \
 		fi; \
 	fi
