Fixed info installation
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@190 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Makefile.in
+++ b/Makefile.in
@@ -167,10 +167,10 @@ clean:	mostlyclean
 
 
 texclean:
-	-rm mtools.aux mtools.toc mtools.log
-	-rm mtools.cps mtools.pgs mtools.vrs
-	-rm mtools.cp mtools.fn mtools.ky
-	-rm mtools.pg mtools.tp mtools.vr
+	-rm -f mtools.aux mtools.toc mtools.log
+	-rm -f mtools.cps mtools.pgs mtools.vrs
+	-rm -f mtools.cp mtools.fn mtools.ky
+	-rm -f mtools.pg mtools.tp mtools.vr
 
 info: mtools.info
 %.info: %.texi
@@ -206,10 +206,7 @@ install-info: info
 	  done; \
 	fi; \
 	if [ -n "$(INSTALL_INFO)" ] ; then \
-		if [ -f $(DESTDIR)$(infodir)/dir.info ] ; then \
-			$(INSTALL_INFO) $(DESTDIR)$(infodir)/mtools.info $(DESTDIR)$(infodir)/dir.info; \
-		else \
-			$(INSTALL_INFO) $(DESTDIR)$(infodir)/mtools.info $(DESTDIR)$(infodir)/dir; \
+		$(INSTALL_INFO) --info-dir=$(DESTDIR)$(infodir) $(DESTDIR)$(infodir)/mtools.info; \
 		fi; \
 	fi
 
