Changed architecture into "any" to be able to compile on amd64
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@198 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Maintainer: Alain Knaff <alain@knaff.lu>
 Package: mtools
 Section: otherosfs
 Priority: optional
-Architecture: i386
+Architecture: any
 Depends: libc6 (>= 2.4-1)
 Essential: no
 Provides: mtools
