Fixed "make clean" rules
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@203 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/rules
+++ b/debian/rules
@@ -30,8 +30,9 @@ clean:
 	# Add here commands to clean up after the build process.
 	#-$(MAKE) clean
 	#-$(MAKE) distclean
-	-$(MAKE) clean
-	-$(MAKE) distclean
+	if [ -f Makefile ] ; then $(MAKE) clean ; fi
+	if [ -f Makefile ] ; then $(MAKE) distclean ; fi
+	rm -f config.status Makefile config.log config.h build-stamp
 
 	dh_clean
 
