Missing functions on Solaris
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@237 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -135,11 +135,12 @@ AC_STRUCT_TM
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
 AC_CHECK_FUNCS(strerror random srandom strchr strrchr lockf flock \
-strcasecmp strncasecmp atexit on_exit getpass memmove \
+strcasecmp strncasecmp strnlen atexit on_exit getpass memmove \
 strdup strcspn strspn strtoul strtol memcpy strpbrk memset setenv \
 seteuid setresuid \
 tcsetattr tcflush basename fchdir media_oldaliases llseek lseek64 \
-snprintf stat64 setlocale)
+snprintf stat64 setlocale \
+wcsdup wcscasecmp wcsnlen)
 AC_FUNC_SETPGRP
 
 dnl
