Another attempt at putwc fix for OS/2 BSD support: getuserid/getgroupid in floppyd
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@257 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -140,7 +140,8 @@ strdup strcspn strspn strtoul strtol memcpy strpbrk memset setenv \
 seteuid setresuid \
 tcsetattr tcflush basename fchdir media_oldaliases llseek lseek64 \
 snprintf stat64 setlocale \
-wcsdup wcscasecmp wcsnlen)
+wcsdup wcscasecmp wcsnlen putwc \
+getuserid getgroupid)
 AC_FUNC_SETPGRP
 
 dnl
