*** empty log message ***
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@425 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -155,7 +155,8 @@ seteuid setresuid setpgrp \
 tcsetattr tcflush basename fchdir media_oldaliases llseek lseek64 \
 snprintf stat64 setlocale \
 wcsdup wcscasecmp wcsnlen putwc \
-getuserid getgroupid)
+getuserid getgroupid \
+sigaction)
 AC_FUNC_SETPGRP
 
 dnl
