Fix mt_size_t on NetBSD
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@433 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -101,6 +101,7 @@ AC_CHECK_HEADERS(termio.h sys/termio.h, [break])
 AC_CHECK_HEADERS(termios.h sys/termios.h, [break])
 
 AC_CHECK_TYPES(caddr_t)
+AC_CHECK_SIZEOF(size_t)
 
 dnl
 dnl Check to see if llseek() is declared in unistd.h.  On some libc's
