Blocking locks with timeout
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@455 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/configure.in
+++ b/configure.in
@@ -158,7 +158,7 @@ tcsetattr tcflush basename fchdir media_oldaliases llseek lseek64 \
 snprintf stat64 setlocale \
 wcsdup wcscasecmp wcsnlen putwc \
 getuserid getgroupid \
-sigaction)
+sigaction usleep)
 
 dnl
 dnl Check for 64-bit off_t
