--- a/configure.in
+++ b/configure.in
@@ -152,7 +152,7 @@ dnl Checks for library functions.
 AC_TYPE_SIGNAL
 AC_CHECK_FUNCS(strerror random srandom strchr strrchr lockf flock \
 strcasecmp strncasecmp strnlen atexit on_exit getpass memmove \
-strdup strcspn strspn strtoul strtol memcpy strpbrk memset setenv \
+strdup strndup strcspn strspn strtoul strtol memcpy strpbrk memset setenv \
 seteuid setresuid setpgrp \
 tcsetattr tcflush basename fchdir media_oldaliases llseek lseek64 \
 snprintf stat64 setlocale \
