--- a/configure.in
+++ b/configure.in
@@ -67,7 +67,7 @@ fi])
 dnl Check for configuration options
 dnl Debugging
 AC_ARG_ENABLE(debug,
-[  --enable-debug         debuging messages],
+[  --enable-debug         debugging messages],
 [if test x$enableval = xyes; then
   AC_DEFINE([DEBUG],1,[Define for debugging messages])
 fi])
