--- a/configure.in
+++ b/configure.in
@@ -35,7 +35,6 @@ AC_CANONICAL_SYSTEM
 AC_C_CONST
 AC_C_INLINE
 
-
 dnl Check for configuration options
 dnl Enable OS/2 extended density format disks
 AC_ARG_ENABLE(xdf,
@@ -88,6 +87,7 @@ dnl Checks for libraries.
 dnl AC_IRIX_SUN
 AC_CHECK_LIB(sun, getpwnam)
 AC_CHECK_LIB(cam, cam_open_device)
+AC_CHECK_LIB(iconv, iconv)
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -96,7 +96,7 @@ AC_CHECK_HEADERS(getopt.h sys/stat.h stdlib.h unistd.h linux/unistd.h \
 libc.h fcntl.h limits.h sys/file.h sys/ioctl.h sys/time.h strings.h string.h \
 sys/param.h memory.h malloc.h io.h signal.h sys/signal.h utime.h sgtty.h \
 sys/floppy.h mntent.h sys/sysmacros.h netinet/in.h netinet/tcp.h assert.h \
-iconv.h wctype.h wchar.h locale.h linux/fs.h)
+iconv.h wctype.h wchar.h locale.h xlocale.h linux/fs.h)
 AC_CHECK_HEADERS(termio.h sys/termio.h, [break])
 AC_CHECK_HEADERS(termios.h sys/termios.h, [break])
 
