--- a/Makefile.in
+++ b/Makefile.in
@@ -96,8 +96,8 @@ mattrib.c mbadblocks.1 mbadblocks.c mcat.1 mcat.c mcd.1 mcd.c mclasserase.c \
 mcopy.1 \
 mcopy.c mdel.1 mdel.c mdeltree.1 mdir.1 mdir.c mdu.c mdu.1 mformat.1 \
 mformat.c minfo.c \
-misc.c tty.c scsi.c missFuncs.c mk_direntry.c mkmanifest.1 mkmanifest.c \
-mlabel.1 mlabel.c mmd.1 mmd.c mmount.1 mmount.c mmove.1 mmove.c \
+misc.c tty.c scsi.c scsi_io.c missFuncs.c mk_direntry.c mkmanifest.1 \
+mkmanifest.c mlabel.1 mlabel.c mmd.1 mmd.c mmount.1 mmount.c mmove.1 mmove.c \
 mpartition.1 mpartition.c mrd.1 \
 mren.1 msdos.h mshortname.1 mshowfat.1 mtoolstest.1 mtools.1 mtools.5 mtools.c \
 mtools.conf mtools.h mtype.1 nameclash.h open_image.c patchlevel.c \
@@ -114,7 +114,8 @@ mdel.o mdir.o mdoctorfat.o mdu.o \
 mformat.o minfo.o misc.o missFuncs.o mk_direntry.o mlabel.o mmd.o mmount.o \
 mmove.o mpartition.o mshortname.o mshowfat.o mzip.o mtools.o old_dos.o \
 open_image.o \
-patchlevel.o partition.o plain_io.o precmd.o privileges.o remap.o scsi.o \
+patchlevel.o partition.o plain_io.o precmd.o privileges.o remap.o \
+scsi_io.o scsi.o \
 signal.o stream.o streamcache.o subdir.o unixdir.o tty.o vfat.o xdf_io.o \
 strtonum.o
 
@@ -132,8 +133,8 @@ mdir.c mdu.c mdoctorfat.c mformat.c minfo.c misc.c \
 missFuncs.c mk_direntry.c mlabel.c mmd.c mmount.c mmove.c mpartition.c \
 mshortname.c mshowfat.c mzip.c mtools.c old_dos.c open_image.c \
 partition.c plain_io.c precmd.c privileges.c remap.c \
-scsi.c signal.c stream.c streamcache.c subdir.c unixdir.c tty.o vfat.c \
-xdf_io.c mkmanifest.c
+scsi_io.c scsi.c signal.c stream.c streamcache.c subdir.c unixdir.c tty.o \
+vfat.c xdf_io.c mkmanifest.c
 
 
 SCRIPTS = mcheck mxtar uz tgz mcomp amuFormat.sh
