--- a/Makefile.in
+++ b/Makefile.in
@@ -100,7 +100,8 @@ misc.c tty.c scsi.c scsi_io.c missFuncs.c mk_direntry.c mkmanifest.1 \
 mkmanifest.c mlabel.1 mlabel.c mmd.1 mmd.c mmount.1 mmount.c mmove.1 mmove.c \
 mpartition.1 mpartition.c mrd.1 \
 mren.1 msdos.h mshortname.1 mshowfat.1 mtoolstest.1 mtools.1 mtools.5 mtools.c \
-mtools.conf mtools.h mtype.1 nameclash.h open_image.c patchlevel.c \
+mtools.conf mtools.h mtype.1 nameclash.h offset.c offset.h open_image.c \
+patchlevel.c \
 partition.c plain_io.c plain_io.h precmd.c privileges.c remap.c remap.h \
 scripts signal.c stream.c stream.h \
 streamcache.c streamcache.h subdir.c strtonum.c sysincludes.h unixdir.c todo \
@@ -112,8 +113,8 @@ file_name.o filter.o floppyd_io.o force_io.o hash.o init.o llong.o lockdev.o \
 match.o mainloop.o mattrib.o mbadblocks.o mcat.o mcd.o mclasserase.o mcopy.o \
 mdel.o mdir.o mdoctorfat.o mdu.o \
 mformat.o minfo.o misc.o missFuncs.o mk_direntry.o mlabel.o mmd.o mmount.o \
-mmove.o mpartition.o mshortname.o mshowfat.o mzip.o mtools.o old_dos.o \
-open_image.o \
+mmove.o mpartition.o mshortname.o mshowfat.o mzip.o mtools.o offset.o \
+old_dos.o open_image.o \
 patchlevel.o partition.o plain_io.o precmd.o privileges.o remap.o \
 scsi_io.o scsi.o \
 signal.o stream.o streamcache.o subdir.o unixdir.o tty.o vfat.o xdf_io.o \
@@ -131,7 +132,7 @@ file_read.c filter.c floppyd_io.c force_io.c hash.c init.c lockdev.c match.c \
 mainloop.c mattrib.c mbadblocks.c mcat.c mcd.c mclasserase.c mcopy.c mdel.c \
 mdir.c mdu.c mdoctorfat.c mformat.c minfo.c misc.c \
 missFuncs.c mk_direntry.c mlabel.c mmd.c mmount.c mmove.c mpartition.c \
-mshortname.c mshowfat.c mzip.c mtools.c old_dos.c open_image.c \
+mshortname.c mshowfat.c mzip.c mtools.c offset.c old_dos.c open_image.c \
 partition.c plain_io.c precmd.c privileges.c remap.c \
 scsi_io.c scsi.c signal.c stream.c streamcache.c subdir.c unixdir.c tty.o \
 vfat.c xdf_io.c mkmanifest.c
