--- a/Makefile.in
+++ b/Makefile.in
@@ -104,8 +104,8 @@ mtools.conf mtools.h mtype.1 nameclash.h offset.c offset.h open_image.c \
 patchlevel.c \
 partition.c plain_io.c plain_io.h precmd.c privileges.c remap.c remap.h \
 scripts signal.c stream.c stream.h \
-streamcache.c streamcache.h subdir.c strtonum.c sysincludes.h unixdir.c todo \
-vfat.c vfat.h xdf_io.c xdf_io.h
+streamcache.c streamcache.h subdir.c strtonum.c sysincludes.h swap.c swap.h \
+unixdir.c todo vfat.c vfat.h xdf_io.c xdf_io.h
 
 OBJS1 = buffer.o charsetConv.o codepages.o config.o copyfile.o \
 devices.o dirCache.o directory.o direntry.o expand.o fat.o fat_free.o file.o  \
@@ -117,8 +117,8 @@ mmove.o mpartition.o mshortname.o mshowfat.o mzip.o mtools.o offset.o \
 old_dos.o open_image.o \
 patchlevel.o partition.o plain_io.o precmd.o privileges.o remap.o \
 scsi_io.o scsi.o \
-signal.o stream.o streamcache.o subdir.o unixdir.o tty.o vfat.o xdf_io.o \
-strtonum.o
+signal.o stream.o streamcache.o subdir.o swap.o unixdir.o tty.o vfat.o \
+xdf_io.o strtonum.o
 
 OBJS2 = missFuncs.o mkmanifest.o misc.o patchlevel.o
 
@@ -134,8 +134,8 @@ mdir.c mdu.c mdoctorfat.c mformat.c minfo.c misc.c \
 missFuncs.c mk_direntry.c mlabel.c mmd.c mmount.c mmove.c mpartition.c \
 mshortname.c mshowfat.c mzip.c mtools.c offset.c old_dos.c open_image.c \
 partition.c plain_io.c precmd.c privileges.c remap.c \
-scsi_io.c scsi.c signal.c stream.c streamcache.c subdir.c unixdir.c tty.o \
-vfat.c xdf_io.c mkmanifest.c
+scsi_io.c scsi.c signal.c stream.c streamcache.c subdir.c swap.c unixdir.c \
+tty.c vfat.c xdf_io.c mkmanifest.c
 
 
 SCRIPTS = mcheck mxtar uz tgz mcomp amuFormat.sh
