--- a/configure.in
+++ b/configure.in
@@ -16,7 +16,7 @@ dnl along with Mtools.  If not, see <http://www.gnu.org/licenses/>.
 dnl
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(buffer.c)
-
+m4_include([m4/ax_lib_socket_nsl.m4])
 AC_CONFIG_HEADER(config.h)
 
 dnl Checks for compiler
@@ -88,6 +88,9 @@ dnl AC_IRIX_SUN
 AC_CHECK_LIB(sun, getpwnam)
 AC_CHECK_LIB(cam, cam_open_device)
 AC_CHECK_LIB(iconv, iconv)
+
+dnl Solaris
+AX_LIB_SOCKET_NSL
 
 dnl Checks for header files.
 AC_HEADER_STDC
